# nix-config

./: .gitmodules  2  deploy.sh  flake.nix  hyprstart.sh  result
.forgejo/workflows/: flake-check.yaml
assets/: catppuccin-mocha-base16.yaml
config/fish/: config.fish  fish_variables
config/ghostty/: config
config/kitty/: kitty.conf
config/wezterm/: wezterm.lua
darwin/: default.nix
darwin/MINIBUBBLES/: default.nix
darwin/NTS1414/: default.nix
dotfiles/: .gitignore  gnome-terminal-override  install_dots.sh
home-manager/: desktopEntries.nix  g14-fedora.nix  git.nix  gnome.nix  gtk.nix  home.nix  kitty.nix  nvim.nix  rev3-fedora.nix  shell.nix  theme.nix  walker.nix  wezterm.nix  wofi.nix
home-manager/armcord/: default.nix
home-manager/btop/: default.nix
home-manager/discord/: default.nix
home-manager/dunst/: default.nix
nixos/: base.nix  configuration.nix  containers.nix  gnome.nix  hardware-configuration.nix  host.nix  hyprland.nix  nautilus.nix  nvidia.nix  services.nix  stylix.nix  vm.nix  wm.nix
overlays/: default.nix
pkgs/: catppuccin-gtk.nix  default.nix  gtk.nix  protonhax.nix
secrets/: authentik.age  caddy.age  forgejo-mail.age  forgejo-oidc.age  forgejo-runner-vista.age  headscale.age  nextcloud_admin.age  nextcloud_whiteboard.age  onlyoffice.age  open-webui.age  pocket-id.age  restic-env.age  restic-password.age  restic-repo.age  searxng.age  secrets.nix  valheim.age  vaultwarden.age  wedding_site.age
templates/: default.nix
templates/rust_arduino/: Cargo.toml  flake.nix
templates/rust_arduino/src/: main.rs
(+153 files in other folders)
