[package]
name = "foo-bar"
version = "0.1.0"
license = "MIT"
edition = "2021"

[[bin]]
name = "foo-bar"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
